將編碼轉換模組化 完成剪貼簿轉換頁面 設定檔新增AssistiveTouch選項

--- a/ConvertZZ/ConvertZZ.csproj
+++ b/ConvertZZ/ConvertZZ.csproj
@@ -86,6 +86,7 @@
     </Compile>
     <Compile Include="Enums\Enum_Mode.cs" />
     <Compile Include="Moudle\ChineseConverter.cs" />
+    <Compile Include="Moudle\ConvertString.cs" />
     <Compile Include="Moudle\FastReplace.cs" />
     <Compile Include="Moudle\TransferEncodeHelper.cs" />
     <Compile Include="Moudle\Window_MessageBoxEx.xaml.cs">
