實做簡單的編碼分析(判斷是GBK或BIG5)

--- a/ConvertZZ/ConvertZZ.csproj
+++ b/ConvertZZ/ConvertZZ.csproj
@@ -87,6 +87,7 @@
     <Compile Include="Enums\Enum_Mode.cs" />
     <Compile Include="Moudle\ChineseConverter.cs" />
     <Compile Include="Moudle\ConvertString.cs" />
+    <Compile Include="Moudle\EncodingAnalyzer.cs" />
     <Compile Include="Moudle\FastReplace.cs" />
     <Compile Include="Moudle\Hotkey.cs" />
     <Compile Include="Moudle\TransferEncodeHelper.cs" />
