--- a/ConvertZZ/ConvertZZ.csproj
+++ b/ConvertZZ/ConvertZZ.csproj
@@ -104,6 +104,8 @@
     <Compile Include="Moudle\EncodingAnalyzer.cs" />
     <Compile Include="Moudle\Extension_ID3.cs" />
     <Compile Include="Moudle\Hotkey.cs" />
+    <Compile Include="Moudle\Shortcut.cs" />
+    <Compile Include="Moudle\StreamString.cs" />
     <Compile Include="Moudle\StringToUnicode.cs" />
     <Compile Include="Moudle\Toast.xaml.cs">
       <DependentUpon>Toast.xaml</DependentUpon>
