--- a/ConvertZZ/packages.config
+++ b/ConvertZZ/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Fanhuaji-API" version="1.0.0" targetFramework="net472" />
   <package id="Flier.Toolbox.Text" version="1.0.1" targetFramework="net472" />
   <package id="MaterialDesignColors" version="1.2.0" targetFramework="net472" />
   <package id="MaterialDesignThemes" version="2.6.0" targetFramework="net472" />
