--- a/ConvertZZ/packages.config
+++ b/ConvertZZ/packages.config
@@ -2,9 +2,11 @@
 <packages>
   <package id="Fanhuaji-API" version="1.0.0" targetFramework="net472" />
   <package id="Flier.Toolbox.Text" version="1.0.1" targetFramework="net472" />
+  <package id="Fody" version="6.1.0" targetFramework="net472" developmentDependency="true" />
   <package id="MaterialDesignColors" version="1.2.0" targetFramework="net472" />
   <package id="MaterialDesignThemes" version="2.6.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
+  <package id="PropertyChanged.Fody" version="3.2.6" targetFramework="net472" />
   <package id="taglib" version="2.1.0.0" targetFramework="net472" />
   <package id="WindowsAPICodePack" version="1.1.0" targetFramework="net461" />
 </packages>
